--- a/style.css
+++ b/style.css
@@ -101,7 +101,10 @@ h1, h2, h3, h4 {
 .intro-text {
     max-width: 700px;
     margin: 1.5rem auto;
-    font-size: 1.1em;
+    font-size: 1.4em;
+    font-family: 'Sacramento', cursive;
+    color: var(--primary-blue);
+    line-height: 1.4;
 }
 
 /* WEDDING DETAILS */
